fix flex spacing

--- a/style.css
+++ b/style.css
@@ -2,55 +2,91 @@
 
 body {
     background-color: rgb(96, 91, 172);
+}
+
+img {
+    max-width: 100%;
+}
+
+.button {
+    padding : 5px;
+}
+
+.gameboard {
     display: flex;
+    justify-content: space-between;
     flex-direction: column;
-    align-items: center;
-    border : 2px solid black;
+    text-align: center;
+    font-size: 7vw;
+    padding: 50px;
     font-family :Arial, Helvetica, sans-serif;
     color: rgb(208, 255, 100);
 }
 
+.buckets {
+    border : 2px solid black;
+}
+
+.header {
+    font-weight: bold;
+}
+
+.sub {
+    font-size : 2.5vw;
+}
+
+#score {
+    display: flex;
+    font-size: 3vw;
+    justify-content: space-evenly;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    border: 2px solid lightblue;
+    padding: 10px;
+}
+
 #game {
-    font-size: 200px;
+    font-size: 50px;
 }
 
 #result {
-    font-size: 100px;
+    margin-bottom: 20px;
 }
 
-#round {
-    color: white;
+#roundNumber {
+    color: aliceblue;
     font-weight: bold;
-    font-style: italic;
-    font-size: larger;
+    text-decoration: underline;
+    font-size: 4vw;
+    margin-bottom: 5px;
 }
+
+#select, #round {
+    color: white;
+    font-size: 3vw;
+}
+
 
 #container {
     display: flex;
+    max-width: 100%;
     border: 2px solid black;
     justify-content: center;
-    gap: 20px;
+    gap: 10px;
     padding: 20px;
-    margin: 20px;
+    margin-top: 20px;
+    margin-bottom: 20px;
 }
 
-.playing {
-    transform: scale(1.5);
-}
 
-img {
-    height: 250px;
-}
 .button :hover {
     border: 2px solid black;
 }
 
 button {
-    height : 50px;
-    width: 200px;
     border-radius: 20%;
     background-color: rgba(120, 163, 243, 0.774);
     font-size: large;
     font-weight: bolder;
-    font-family: Arial, Helvetica, sans-serif;
+    margin-bottom: 20px;
 }
